# player

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh
include/: player.hpp
src/proto/: player.proto
